<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/home"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <item
        android:id="@+id/cate"
        android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/item_temp"
                android:icon="@drawable/thermometer"
                android:title="@string/temp" />

            <item
                android:id="@+id/item_length"
                android:icon="@drawable/ruler"
                android:title="@string/length" />

            <item
                android:id="@+id/item_weight"
                android:icon="@drawable/mass"
                android:title="@string/weight" />

            <item
                android:id="@+id/item_volume"
                android:icon="@drawable/cube"
                android:title="@string/volume" />

            <item
                android:id="@+id/item_time"
                android:icon="@drawable/clock"
                android:title="@string/time" />

            <item
                android:id="@+id/item_area"
                android:icon="@drawable/protractor"
                android:title="@string/area" />

            <item
                android:id="@+id/item_storage"
                android:icon="@drawable/hard"
                android:title="@string/storage" />

            <item
                android:id="@+id/item_number"
                android:icon="@drawable/number"
                android:title="@string/number" />
        </menu>
    </item>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>

</menu>