<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_number_system"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mohamed.simpleconverter.Fragments.NumberSystemActivityFragment">

    <android.support.v7.widget.CardView style="@style/HeaderCardView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/tvFromVal"
                    style="@style/UnitText"
                    android:text="@string/binary" />

                <TextView
                    android:id="@+id/tvToRes"
                    style="@style/UnitText"
                    android:text="@string/decimal" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/etValue"
                    style="@style/ValueEditText" />

                <EditText
                    android:id="@+id/etResult"
                    style="@style/ResultEditText" />
            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            style="@style/UnitsCardView"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp">

            <RadioGroup
                android:id="@+id/rgfrom"
                style="@style/UnitsRadioGroup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from" />

                <RadioButton
                    android:id="@+id/rbBinary1"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/binary" />

                <RadioButton
                    android:id="@+id/rbDecimal1"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decimal" />

                <RadioButton
                    android:id="@+id/rbOctal1"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/octal" />

                <RadioButton
                    android:id="@+id/rbHex1"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hexadecimal" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/UnitsCardView"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="4dp">

            <RadioGroup
                android:id="@+id/rgTo"
                style="@style/UnitsRadioGroup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to" />

                <RadioButton
                    android:id="@+id/rbBinary2"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary" />

                <RadioButton
                    android:id="@+id/rbDecimal2"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/decimal" />

                <RadioButton
                    android:id="@+id/rbOctal2"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/octal" />

                <RadioButton
                    android:id="@+id/rbHex2"
                    style="@style/UnitRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hexadecimal" />
            </RadioGroup>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/crKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btA"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btB"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/b"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btC"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btD"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/d"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btE"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/e"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btF"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".16"
                android:padding="8dp"
                android:text="@string/f"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

