<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mohamed.simpleconverter.Fragments.LengthActivityFragment">

    <android.support.v7.widget.CardView style="@style/HeaderCardView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/tvFromVal"
                    style="@style/UnitText"
                    android:text="@string/nanometre" />

                <TextView
                    android:id="@+id/tvToRes"
                    style="@style/UnitText"
                    android:text="@string/micro" />
            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/etValue"
                    style="@style/ValueEditText" />

                <EditText
                    android:id="@+id/etResult"
                    style="@style/ResultEditText" />
            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                style="@style/UnitsCardView"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="8dp">

                <RadioGroup
                    android:id="@+id/rgfrom"
                    style="@style/UnitsRadioGroup">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from" />

                    <RadioButton
                        android:id="@+id/rbNanometre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/nanometre" />

                    <RadioButton
                        android:id="@+id/rbMicrometre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/micro" />

                    <RadioButton
                        android:id="@+id/rbMillimetre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/millimetre" />

                    <RadioButton
                        android:id="@+id/rbCentimetre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/centimetre" />

                    <RadioButton
                        android:id="@+id/rbMetre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/metre" />

                    <RadioButton
                        android:id="@+id/rbKilometre1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kilometre" />

                    <RadioButton
                        android:id="@+id/rbMile1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mile" />

                    <RadioButton
                        android:id="@+id/rbNMile1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nmile" />

                    <RadioButton
                        android:id="@+id/rbInch1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inch" />

                    <RadioButton
                        android:id="@+id/rbFeet1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feet" />

                    <RadioButton
                        android:id="@+id/rbYard1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yard" />

                    <RadioButton
                        android:id="@+id/rbLYear1"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lyear" />
                </RadioGroup>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/UnitsCardView"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="4dp">

                <RadioGroup
                    android:id="@+id/rgTo"
                    style="@style/UnitsRadioGroup">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to" />

                    <RadioButton
                        android:id="@+id/rbNanometre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nanometre" />

                    <RadioButton
                        android:id="@+id/rbMicrometre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/micro" />

                    <RadioButton
                        android:id="@+id/rbMillimetre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/millimetre" />

                    <RadioButton
                        android:id="@+id/rbCentimetre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/centimetre" />

                    <RadioButton
                        android:id="@+id/rbMetre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/metre" />

                    <RadioButton
                        android:id="@+id/rbKilometre2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kilometre" />

                    <RadioButton
                        android:id="@+id/rbMile2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mile" />

                    <RadioButton
                        android:id="@+id/rbNMile2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nmile" />

                    <RadioButton
                        android:id="@+id/rbInch2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inch" />

                    <RadioButton
                        android:id="@+id/rbFeet2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feet" />

                    <RadioButton
                        android:id="@+id/rbYard2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yard" />

                    <RadioButton
                        android:id="@+id/rbLYear2"
                        style="@style/UnitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lyear" />
                </RadioGroup>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
